@@ -34,7 +34,8 @@
   Key mapping for skins
 */
 
-const char sknKey92[] = {
+const char sknKey92[] = 
+{
     TIKEY_HAND,
     TIKEY_F1, TIKEY_F2, TIKEY_F3, TIKEY_F4, TIKEY_F5, TIKEY_F6, TIKEY_F7,
     TIKEY_F8,
@@ -63,11 +64,12 @@ const char sknKey92[] = {
     TIKEY_ENTER1
 };
 
-const char sknKey89[] = {
+const char sknKey89[] = 
+{
     TIKEY_F1, TIKEY_F2, TIKEY_F3, TIKEY_F4, TIKEY_F5,
     TIKEY_2ND, TIKEY_SHIFT, TIKEY_ESCAPE, TIKEY_LEFT, TIKEY_RIGHT,
     TIKEY_UP, TIKEY_DOWN, TIKEY_DIAMOND, TIKEY_ALPHA, TIKEY_APPS,
-    TIKEY_COS, TIKEY_MODE, TIKEY_F6, TIKEY_BACKSPACE, TIKEY_CLEAR,
+    TIKEY_HOME, TIKEY_MODE, TIKEY_CATALOG, TIKEY_BACKSPACE, TIKEY_CLEAR,
     TIKEY_X, TIKEY_Y, TIKEY_Z, TIKEY_T, TIKEY_POWER,
     TIKEY_EQUALS, TIKEY_PALEFT, TIKEY_PARIGHT, TIKEY_COMMA, TIKEY_DIVIDE,
     TIKEY_PIPE, TIKEY_7, TIKEY_8, TIKEY_9, TIKEY_MULTIPLY,
